src/Parser.output
State 81 conflicts: 1 shift/reduce
State 164 conflicts: 2 shift/reduce
State 175 conflicts: 60 reduce/reduce
State 176 conflicts: 60 reduce/reduce


Grammar

    0 $accept: unit "end of file"

    1 unit: statements

    2 statements: statements statement
    3           | /* empty */

    4 statement: assignment
    5          | vardeclaration
    6          | ifStatement
    7          | ifElseStatement
    8          | whileStatement
    9          | forStatement
   10          | functionCallStatement
   11          | newCommand
   12          | returnCommand

   13 vardeclaration: varType id ";"

   14 varType: "Number"
   15        | "Bool"
   16        | "List"
   17        | "String"
   18        | "Void"

   19 assignment: "make" id expression ";"
   20           | "make" id error ";"
   21           | error id ";"
   22           | error ";"

   23 id: "identifier"

   24 expression: expression "+" expression
   25           | expression "-" expression
   26           | expression "*" expression
   27           | expression "/" expression
   28           | expression "<" expression
   29           | expression ">" expression
   30           | expression "<=" expression
   31           | expression ">=" expression
   32           | expression "and" expression
   33           | expression "or" expression
   34           | "not" expression
   35           | expression "==" expression
   36           | expression "<>" expression
   37           | "(" expression ")"
   38           | "(" error ")"
   39           | sysFunctionCall
   40           | functionCall
   41           | numberValue
   42           | stringValue
   43           | boolValue
   44           | listValue
   45           | id

   46 numberValue: "number"
   47            | "-" "number"
   48            | "+" "number"

   49 stringValue: "string"

   50 boolValue: "True"
   51          | "False"

   52 listValue: "[" listElements "]"

   53 listElements: listElements listElement
   54             | /* empty */

   55 listElement: numberValue
   56            | boolValue
   57            | listValue
   58            | stringValue
   59            | id

   60 arguments: arguments argument
   61          | /* empty */

   62 argument: expression

   63 functionCallStatement: sysFunctionCall ";"
   64                      | functionCall ";"

   65 functionCall: id "(" arguments ")"

   66 sysFunctionCall: sysReservedFunctionToken "(" ")"
   67                | "read" "(" varType ")"
   68                | sysReservedFunctionToken "(" expression ")"
   69                | sysReservedFunctionToken "(" expression expression ")"

   70 sysReservedFunctionToken: "abs"
   71                         | "minus"
   72                         | "round"
   73                         | "floor"
   74                         | "ceil"
   75                         | "cos"
   76                         | "sin"
   77                         | "tan"
   78                         | "arctan"
   79                         | "exp"
   80                         | "ln"
   81                         | "random"
   82                         | "number?"
   83                         | "string?"
   84                         | "boolean?"
   85                         | "list?"
   86                         | "first"
   87                         | "rest"
   88                         | "nth"
   89                         | "empty?"
   90                         | "equal?"
   91                         | "print"
   92                         | "wait"
   93                         | "penup"
   94                         | "pendown"
   95                         | "setpensize"
   96                         | "setpencolor"
   97                         | "forward"
   98                         | "backward"
   99                         | "leftturn"
  100                         | "rightturn"
  101                         | "showturtle"
  102                         | "hideturtle"
  103                         | "position"
  104                         | "heading"
  105                         | "setposition"
  106                         | "setheading"

  107 codeBlock: "{" statements "}"

  108 ifStatement: "if" expression codeBlock

  109 ifElseStatement: "ifelse" expression codeBlock codeBlock
  110                | "ifelse" expression codeBlock error

  111 whileStatement: "while" expression codeBlock

  112 forStatement: "for" "{" id expression expression stepExpression "}" codeBlock

  113 stepExpression: expression
  114               | /* empty */

  115 newCommand: varType id "(" parameters ")" codeBlock

  116 returnCommand: "return" expression ";"
  117              | "return" ";"

  118 parameters: parameters parameter
  119           | /* empty */

  120 parameter: varType id


Terminals, with rules where they appear

"end of file" (0) 0
error (256) 20 21 22 38 110
"(" (258) 37 38 65 66 67 68 69 115
")" (259) 37 38 65 66 67 68 69 115
";" (260) 13 19 20 21 22 63 64 116 117
"identifier" (261) 23
"string" (262) 49
"number" (263) 46 47 48
"if" (264) 108
"ifelse" (265) 109 110
"for" (266) 112
"while" (267) 111
"{" (268) 107 112
"}" (269) 107 112
"[" (270) 52
"]" (271) 52
"==" (272) 35
"<>" (273) 36
"+" (274) 24 48
"-" (275) 25 47
"*" (276) 26
"/" (277) 27
"<" (278) 28
">" (279) 29
"<=" (280) 30
">=" (281) 31
"Number" (282) 14
"Bool" (283) 15
"String" (284) 17
"List" (285) 16
"Void" (286) 18
"True" (287) 50
"False" (288) 51
"or" (289) 33
"and" (290) 32
"not" (291) 34
"make" (292) 19 20
"return" (293) 116 117
"penup" (294) 93
"pendown" (295) 94
"setpensize" (296) 95
"setpencolor" (297) 96
"forward" (298) 97
"backward" (299) 98
"leftturn" (300) 99
"rightturn" (301) 100
"showturtle" (302) 101
"hideturtle" (303) 102
"position" (304) 103
"heading" (305) 104
"setposition" (306) 105
"setheading" (307) 106
"abs" (308) 70
"minus" (309) 71
"round" (310) 72
"floor" (311) 73
"ceil" (312) 74
"cos" (313) 75
"sin" (314) 76
"tan" (315) 77
"arctan" (316) 78
"exp" (317) 79
"ln" (318) 80
"random" (319) 81
"number?" (320) 82
"string?" (321) 83
"boolean?" (322) 84
"list?" (323) 85
"first" (324) 86
"rest" (325) 87
"nth" (326) 88
"empty?" (327) 89
"equal?" (328) 90
"print" (329) 91
"wait" (330) 92
"read" (331) 67


Nonterminals, with rules where they appear

$accept (77)
    on left: 0
unit (78)
    on left: 1, on right: 0
statements (79)
    on left: 2 3, on right: 1 2 107
statement (80)
    on left: 4 5 6 7 8 9 10 11 12, on right: 2
vardeclaration (81)
    on left: 13, on right: 5
varType (82)
    on left: 14 15 16 17 18, on right: 13 67 115 120
assignment (83)
    on left: 19 20 21 22, on right: 4
id (84)
    on left: 23, on right: 13 19 20 21 45 59 65 112 115 120
expression (85)
    on left: 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41
    42 43 44 45, on right: 19 24 25 26 27 28 29 30 31 32 33 34 35 36
    37 62 68 69 108 109 110 111 112 113 116
numberValue (86)
    on left: 46 47 48, on right: 41 55
stringValue (87)
    on left: 49, on right: 42 58
boolValue (88)
    on left: 50 51, on right: 43 56
listValue (89)
    on left: 52, on right: 44 57
listElements (90)
    on left: 53 54, on right: 52 53
listElement (91)
    on left: 55 56 57 58 59, on right: 53
arguments (92)
    on left: 60 61, on right: 60 65
argument (93)
    on left: 62, on right: 60
functionCallStatement (94)
    on left: 63 64, on right: 10
functionCall (95)
    on left: 65, on right: 40 64
sysFunctionCall (96)
    on left: 66 67 68 69, on right: 39 63
sysReservedFunctionToken (97)
    on left: 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87
    88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106,
    on right: 66 68 69
codeBlock (98)
    on left: 107, on right: 108 109 110 111 112 115
ifStatement (99)
    on left: 108, on right: 6
ifElseStatement (100)
    on left: 109 110, on right: 7
whileStatement (101)
    on left: 111, on right: 8
forStatement (102)
    on left: 112, on right: 9
stepExpression (103)
    on left: 113 114, on right: 112
newCommand (104)
    on left: 115, on right: 11
returnCommand (105)
    on left: 116 117, on right: 12
parameters (106)
    on left: 118 119, on right: 115 118
parameter (107)
    on left: 120, on right: 118


state 0

    0 $accept: . unit "end of file"
    1 unit: . statements
    2 statements: . statements statement
    3           | .

    $default  reduce using rule 3 (statements)

    unit        go to state 1
    statements  go to state 2


state 1

    0 $accept: unit . "end of file"

    "end of file"  shift, and go to state 3


state 2

    1 unit: statements .  ["end of file"]
    2 statements: statements . statement
    4 statement: . assignment
    5          | . vardeclaration
    6          | . ifStatement
    7          | . ifElseStatement
    8          | . whileStatement
    9          | . forStatement
   10          | . functionCallStatement
   11          | . newCommand
   12          | . returnCommand
   13 vardeclaration: . varType id ";"
   14 varType: . "Number"
   15        | . "Bool"
   16        | . "List"
   17        | . "String"
   18        | . "Void"
   19 assignment: . "make" id expression ";"
   20           | . "make" id error ";"
   21           | . error id ";"
   22           | . error ";"
   23 id: . "identifier"
   63 functionCallStatement: . sysFunctionCall ";"
   64                      | . functionCall ";"
   65 functionCall: . id "(" arguments ")"
   66 sysFunctionCall: . sysReservedFunctionToken "(" ")"
   67                | . "read" "(" varType ")"
   68                | . sysReservedFunctionToken "(" expression ")"
   69                | . sysReservedFunctionToken "(" expression expression ")"
   70 sysReservedFunctionToken: . "abs"
   71                         | . "minus"
   72                         | . "round"
   73                         | . "floor"
   74                         | . "ceil"
   75                         | . "cos"
   76                         | . "sin"
   77                         | . "tan"
   78                         | . "arctan"
   79                         | . "exp"
   80                         | . "ln"
   81                         | . "random"
   82                         | . "number?"
   83                         | . "string?"
   84                         | . "boolean?"
   85                         | . "list?"
   86                         | . "first"
   87                         | . "rest"
   88                         | . "nth"
   89                         | . "empty?"
   90                         | . "equal?"
   91                         | . "print"
   92                         | . "wait"
   93                         | . "penup"
   94                         | . "pendown"
   95                         | . "setpensize"
   96                         | . "setpencolor"
   97                         | . "forward"
   98                         | . "backward"
   99                         | . "leftturn"
  100                         | . "rightturn"
  101                         | . "showturtle"
  102                         | . "hideturtle"
  103                         | . "position"
  104                         | . "heading"
  105                         | . "setposition"
  106                         | . "setheading"
  108 ifStatement: . "if" expression codeBlock
  109 ifElseStatement: . "ifelse" expression codeBlock codeBlock
  110                | . "ifelse" expression codeBlock error
  111 whileStatement: . "while" expression codeBlock
  112 forStatement: . "for" "{" id expression expression stepExpression "}" codeBlock
  115 newCommand: . varType id "(" parameters ")" codeBlock
  116 returnCommand: . "return" expression ";"
  117              | . "return" ";"

    error          shift, and go to state 4
    "identifier"   shift, and go to state 5
    "if"           shift, and go to state 6
    "ifelse"       shift, and go to state 7
    "for"          shift, and go to state 8
    "while"        shift, and go to state 9
    "Number"       shift, and go to state 10
    "Bool"         shift, and go to state 11
    "String"       shift, and go to state 12
    "List"         shift, and go to state 13
    "Void"         shift, and go to state 14
    "make"         shift, and go to state 15
    "return"       shift, and go to state 16
    "penup"        shift, and go to state 17
    "pendown"      shift, and go to state 18
    "setpensize"   shift, and go to state 19
    "setpencolor"  shift, and go to state 20
    "forward"      shift, and go to state 21
    "backward"     shift, and go to state 22
    "leftturn"     shift, and go to state 23
    "rightturn"    shift, and go to state 24
    "showturtle"   shift, and go to state 25
    "hideturtle"   shift, and go to state 26
    "position"     shift, and go to state 27
    "heading"      shift, and go to state 28
    "setposition"  shift, and go to state 29
    "setheading"   shift, and go to state 30
    "abs"          shift, and go to state 31
    "minus"        shift, and go to state 32
    "round"        shift, and go to state 33
    "floor"        shift, and go to state 34
    "ceil"         shift, and go to state 35
    "cos"          shift, and go to state 36
    "sin"          shift, and go to state 37
    "tan"          shift, and go to state 38
    "arctan"       shift, and go to state 39
    "exp"          shift, and go to state 40
    "ln"           shift, and go to state 41
    "random"       shift, and go to state 42
    "number?"      shift, and go to state 43
    "string?"      shift, and go to state 44
    "boolean?"     shift, and go to state 45
    "list?"        shift, and go to state 46
    "first"        shift, and go to state 47
    "rest"         shift, and go to state 48
    "nth"          shift, and go to state 49
    "empty?"       shift, and go to state 50
    "equal?"       shift, and go to state 51
    "print"        shift, and go to state 52
    "wait"         shift, and go to state 53
    "read"         shift, and go to state 54

    "end of file"  reduce using rule 1 (unit)

    statement                 go to state 55
    vardeclaration            go to state 56
    varType                   go to state 57
    assignment                go to state 58
    id                        go to state 59
    functionCallStatement     go to state 60
    functionCall              go to state 61
    sysFunctionCall           go to state 62
    sysReservedFunctionToken  go to state 63
    ifStatement               go to state 64
    ifElseStatement           go to state 65
    whileStatement            go to state 66
    forStatement              go to state 67
    newCommand                go to state 68
    returnCommand             go to state 69


state 3

    0 $accept: unit "end of file" .

    $default  accept


state 4

   21 assignment: error . id ";"
   22           | error . ";"
   23 id: . "identifier"

    ";"           shift, and go to state 70
    "identifier"  shift, and go to state 5

    id  go to state 71


state 5

   23 id: "identifier" .

    $default  reduce using rule 23 (id)


state 6

   23 id: . "identifier"
   24 expression: . expression "+" expression
   25           | . expression "-" expression
   26           | . expression "*" expression
   27           | . expression "/" expression
   28           | . expression "<" expression
   29           | . expression ">" expression
   30           | . expression "<=" expression
   31           | . expression ">=" expression
   32           | . expression "and" expression
   33           | . expression "or" expression
   34           | . "not" expression
   35           | . expression "==" expression
   36           | . expression "<>" expression
   37           | . "(" expression ")"
   38           | . "(" error ")"
   39           | . sysFunctionCall
   40           | . functionCall
   41           | . numberValue
   42           | . stringValue
   43           | . boolValue
   44           | . listValue
   45           | . id
   46 numberValue: . "number"
   47            | . "-" "number"
   48            | . "+" "number"
   49 stringValue: . "string"
   50 boolValue: . "True"
   51          | . "False"
   52 listValue: . "[" listElements "]"
   65 functionCall: . id "(" arguments ")"
   66 sysFunctionCall: . sysReservedFunctionToken "(" ")"
   67                | . "read" "(" varType ")"
   68                | . sysReservedFunctionToken "(" expression ")"
   69                | . sysReservedFunctionToken "(" expression expression ")"
   70 sysReservedFunctionToken: . "abs"
   71                         | . "minus"
   72                         | . "round"
   73                         | . "floor"
   74                         | . "ceil"
   75                         | . "cos"
   76                         | . "sin"
   77                         | . "tan"
   78                         | . "arctan"
   79                         | . "exp"
   80                         | . "ln"
   81                         | . "random"
   82                         | . "number?"
   83                         | . "string?"
   84                         | . "boolean?"
   85                         | . "list?"
   86                         | . "first"
   87                         | . "rest"
   88                         | . "nth"
   89                         | . "empty?"
   90                         | . "equal?"
   91                         | . "print"
   92                         | . "wait"
   93                         | . "penup"
   94                         | . "pendown"
   95                         | . "setpensize"
   96                         | . "setpencolor"
   97                         | . "forward"
   98                         | . "backward"
   99                         | . "leftturn"
  100                         | . "rightturn"
  101                         | . "showturtle"
  102                         | . "hideturtle"
  103                         | . "position"
  104                         | . "heading"
  105                         | . "setposition"
  106                         | . "setheading"
  108 ifStatement: "if" . expression codeBlock
